# markscribe

./: .gitignore  README.md  pyproject.toml
src/markscribe/: _ui.py  cli.py  config.py  converter.py  ocr.py  picker.py
