[project]
name = "markscribe"
version = "0.1.0"
description = "Convert any document to clean Markdown, with smart OCR for diagrams and visual PDFs"
requires-python = ">=3.11"
dependencies = [
    "markitdown[all]>=0.1.0",
    "rich>=13.0",
    "typer>=0.12",
    "pdfplumber>=0.11",
    "openai>=1.0",
    "pillow>=10.0",
]

[project.scripts]
markscribe = "markscribe.cli:app_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/markscribe"]
